# Praxis-LLM

./: .env.example  GPU_README.md  INSTALL_AND_USAGE.md  LOCAL_CONTAINER_SETUP.md  Makefile  README.md  docker-compose.gpu.yml  docker-compose.yml  main.py  pyproject.toml  requirements.txt
.docker/: Dockerfile.data_cdc  Dockerfile.data_crawlers  Dockerfile.feature_pipeline  Dockerfile.inference_pipeline  Dockerfile.mongo-init  Dockerfile.training_pipeline  entrypoint.inference.sh  entrypoint.training.sh  mongo-init.sh
data/: links.txt
src/: README_MLFLOW.md
src/core/: config.py  errors.py  mq.py  opik_utils.py
src/core/db/: documents.py  mongo.py
src/core/rag/: prompt_templates.py  query_expanison.py  reranking.py  retriever.py  self_query.py
src/data_cdc/: cdc.py  config.py  test_cdc.py
src/data_crawling/: config.py  dispatcher.py  main.py
src/data_crawling/crawlers/: custom_article.py  github.py  linkedin.py  medium.py
src/feature_pipeline/: config.py  retriever.py
src/feature_pipeline/data_flow/: stream_input.py  stream_output.py
src/feature_pipeline/generate_dataset/: generate.py
src/feature_pipeline/scripts/: bytewax_entrypoint.sh
src/inference_pipeline/: config.py  deploy_mlflow_model.py  load_from_mlflow.py  main.py  praxis_llm.py  serve_local.py  serve_mlflow_model.py  ui.py  utils.py
src/inference_pipeline/evaluation/: evaluate.py  evaluate_monitoring.py  evaluate_rag.py
src/training_pipeline/: config.py  download_dataset.py  finetune.py  local_training.py
