[project]
name = "praxis-llm-workshop"
version = "0.1.0"
description = "Praxis-LLM project for the end-to-end llmops."
authors = [
    {name = "Dev Jadhav", email = "devj7594@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12.10"
dependencies = [
    "pydantic>=2.6.3",
    "pydantic-settings>=2.2.0",
    "selenium==4.21.0",
    "instructorembedding>=1.0.1",
    "transformers==4.51.3",
    "accelerate==1.7.0",
    "datasets==3.6.0",
    "peft==0.15.2",
    "trl==0.15.2",
    "bitsandbytes==0.42.0",
    "torch==2.7.0",
    "numpy>=1.26.4",
    "gdown>=5.1.0",
    "structlog>=24.1.0",
    "rich>=13.7.1",
    "pika>=1.3.2",
    "mlflow>=2.22.0",
    "qdrant_client>=1.8.0",
    "opik>=1.7.20",
    "langchain-openai>=0.3.16",
    "ruff>=0.4.3",
    "pandas>=2.0.3",
    "datasets>=2.19.1",
    "scikit-learn>=1.4.2",
    "unstructured>=0.14.2",
    "litellm>=1.50.4",
    "langchain>=0.2.11",
    "langchain-community>=0.2.11",
    "html2text>=2024.2.26",
    "huggingface-hub>=0.31.2",
    "sentence-transformers>=4.1.0",
    "gradio>=5.5.0",
    "requests>=2.31.0",
    "pymongo>=4.12.1",
    "fastapi>=0.115.12",
    "uvicorn>=0.34.2",
    "bytewax>=0.21.1",
]
